<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:weightSum="4" >

    <Button
        android:id="@+id/btn_trend"
        style="@style/combination_detail_bottom"
        android:drawableTop="@drawable/icon_person"
        android:enabled="false"
        android:text="@string/netvalue_trend" />

    <Button
        android:id="@+id/btn_comparison"
        style="@style/combination_detail_bottom"
        android:drawableTop="@drawable/icon_person"
        android:text="@string/performance_comparison" />

    <Button
        android:id="@+id/btn_detail"
        style="@style/combination_detail_bottom"
        android:drawableTop="@drawable/icon_person"
        android:text="@string/position_detail" />

    <Button
        android:id="@+id/btn_news"
        style="@style/combination_detail_bottom"
        android:drawableTop="@drawable/icon_person"
        android:text="@string/related_news" />

</LinearLayout>