<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:paddingBottom="5dp"
    android:paddingLeft="15dp"
    android:paddingTop="5dp" >

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:text="@string/positions" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:text="@string/proportion" />

    <TextView
        android:layout_width="1dp"
        android:layout_height="wrap_content"
        android:layout_weight="1.5"
        android:gravity="center_horizontal"
        android:text="@string/rise_value" />

</LinearLayout>