<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f2f2f2" >

    <TextView
        android:id="@+id/tv_setpwddesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginRight="15dip"
        android:layout_marginTop="20dip"
        android:text="@string/set_password_desc"
        android:textSize="18sp" />

    <RelativeLayout
        android:id="@+id/rl_verifycode"
        android:layout_width="290dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_setpwddesc"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dip" >

        <RelativeLayout
            android:layout_width="160dip"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:background="@drawable/edit_text_bg" >

            <TextView
                android:id="@+id/tv_verifycode"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:text="@string/verify_code"
                android:textColor="#000000"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_verifycode"
                android:layout_width="70dip"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="10dip"
                android:background="@null"
                android:hint="@string/hint_verify_code"
                android:inputType="number"
                android:singleLine="true"
                android:textSize="14sp" />
        </RelativeLayout>
        <Button
        android:id="@+id/btn_get_code"
        android:layout_width="120dip"
        android:layout_alignParentRight="true"
        android:layout_height="40dip"
        android:background="@drawable/button_normal_blue"
        android:text="@string/get_code"
        android:textColor="@color/white"
        android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_original"
        android:layout_width="290dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_verifycode"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:background="@drawable/edit_text_bg" >

        <TextView
            android:id="@+id/tv_original_pwd"
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/original_password"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_original_pwd"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@null"
            android:hint="@string/hint_original_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    

    <RelativeLayout
        android:id="@+id/rl_pwd"
        android:layout_width="290dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_original"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:background="@drawable/edit_text_bg" >

        <TextView
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/tv_password"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:background="@null"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_checke_pwd"
        android:layout_width="290dip"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_pwd"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dip"
        android:background="@drawable/edit_text_bg" >

        <TextView
            android:layout_width="70dip"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dip"
            android:text="@string/tv_check_password"
            android:textColor="#000000"
            android:textSize="14sp" />

        <EditText
            android:id="@+id/et_check_pwd"
            android:layout_width="200dip"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:inputType="textPassword"
            android:layout_marginLeft="10dip"
            android:background="@null"
            android:hint="@string/hint_check_password"
            android:singleLine="true"
            android:textSize="14sp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rl_checke_pwd"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/confirm"
            android:layout_width="290dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_normal_blue"
            android:text="@string/confirm"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>