<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white" >

    <RelativeLayout
        android:id="@+id/view_stock_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_gray"
        android:padding="8dp" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:text="@string/stock_name"
            android:layout_marginLeft="8dp"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/current_value"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="20dp"
            android:text="@string/price_change_ratio"
            android:textSize="14sp" />
    </RelativeLayout>

    <Button
        android:id="@+id/btn_add_optional_stock"
        style="@style/button_blue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/add_optional_stock"
        android:textSize="15sp" />

    <FrameLayout
        android:id="@+id/view_datalist"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/btn_add_optional_stock"
        android:layout_below="@+id/view_stock_title" />

</RelativeLayout>