<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0099cc" >

    <!-- android:background="#FF9500" -->

    <LinearLayout
        android:id="@+id/ll_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dip"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/username"
            android:layout_width="290dip"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_bg"
            android:hint="@string/hint_account"
            android:singleLine="true"
            android:text="1218229610@qq.com" />

        <EditText
            android:id="@+id/password"
            android:layout_width="290dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dip"
            android:background="@drawable/edittext_bg"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:singleLine="true"
            android:text="123456" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_forget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/ll_edit"
        android:layout_below="@id/ll_edit"
        android:layout_marginTop="10dip"
        android:clickable="true"
        android:text="@string/tv_forget_password"
        android:textColor="@drawable/text_color_selector"
        android:textSize="16sp" />

    <LinearLayout
        android:id="@+id/ll_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/ll_edit"
        android:layout_below="@id/tv_forget"
        android:layout_centerInParent="true"
        android:orientation="vertical" >

        <Button
            android:id="@+id/login"
            android:layout_width="290dip"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dip"
            android:background="@drawable/button_login"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>