<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/theme_gray"
        android:orientation="horizontal"
        android:padding="4dp"
        android:weightSum="4" >

        <RelativeLayout
            android:id="@+id/tab_1"
            style="@style/bottom_tab_layout" >

            <Button
                android:id="@+id/btn_tab1"
                style="@style/bottom_tab_button" />

            <TextView
                android:id="@+id/tv_tab1"
                style="@style/bottom_tab_text"
                android:layout_below="@+id/btn_tab1"
                android:text="@string/tab_1" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_2"
            style="@style/bottom_tab_layout" >

            <Button
                android:id="@+id/btn_tab2"
                style="@style/bottom_tab_button" />

            <TextView
                android:id="@+id/tv_tab2"
                style="@style/bottom_tab_text"
                android:layout_below="@+id/btn_tab2"
                android:text="@string/tab_2" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_3"
            style="@style/bottom_tab_layout" >

            <Button
                android:id="@+id/btn_tab3"
                style="@style/bottom_tab_button" />

            <TextView
                android:id="@+id/tv_tab3"
                style="@style/bottom_tab_text"
                android:layout_below="@+id/btn_tab3"
                android:text="@string/tab_3" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/tab_4"
            style="@style/bottom_tab_layout" >

            <Button
                android:id="@+id/btn_tab4"
                style="@style/bottom_tab_button" />

            <TextView
                android:id="@+id/tv_tab4"
                style="@style/bottom_tab_text"
                android:layout_below="@+id/btn_tab4"
                android:text="@string/tab_4" />
        </RelativeLayout>
    </LinearLayout>

    <View
        style="@style/divider_line"
        android:layout_height="1dp"
        android:layout_alignParentTop="true"
        android:background="@color/compare_select_gray" />

</RelativeLayout>