<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        style="@style/hwrap_wfill"
        android:layout_marginTop="5dp"
        android:layout_height="wrap_content"
        android:background="@drawable/edittext_bg" >

        <TextView
            android:id="@+id/tv_conbination_name"
            style="@style/hw_wrap"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="6dp"
            android:textSize="16sp"
            android:text="@string/combination_name" />


        <EditText
            android:id="@+id/et_myconbina_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_conbination_name"
            android:background="@null"
            android:hint="@string/my_combination"
            android:inputType="textEmailAddress"
            android:maxLength="10"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="14sp" />
    </RelativeLayout>

    <RelativeLayout
        style="@style/hwrap_wfill"
        android:layout_height="wrap_content"
        android:layout_marginTop="-1dp"
        android:background="@drawable/edittext_bg" >

        <TextView
            android:id="@+id/tv_conbination_desc"
            style="@style/hw_wrap"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:padding="6dp"
            android:text="@string/combination_desc"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/et_myconbina_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/tv_conbination_desc"
            android:background="@null"
            android:hint="@string/conb_desc_hint"
            android:inputType="textEmailAddress"
            android:maxLength="20"
            android:singleLine="true"
            android:textColor="@color/gray"
            android:textSize="14sp" />
    </RelativeLayout>

</LinearLayout>